--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width; initial-scale=1.0">
 		<title>Appointment Creator</title>
+		<link rel="stylesheet" href="css/app.css">
 	</head>
 	<body>
 		<h1>Welcome to the Appointment Creator!</h1>
+		<p>Please select a date for your appointment:</p>
+		<div class="datepicker">
+			<input class="form-control datepicker__input" placeholder="Choose a date..." />
+		</div>
+		<script src="js/datepicker.js" type="text/javascript"></script>
 	</body>
 </html>
