--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Appointment Creator</title>
 		<link rel="stylesheet" href="css/app.css">
+		<link rel="stylesheet" href="css/datepicker.css">
 	</head>
 	<body>
 		<h1>Welcome to the Appointment Creator!</h1>
