--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Appointment Creator</title>
+		<link rel="stylesheet" href="css/icons.css">
 		<link rel="stylesheet" href="css/app.css">
 		<link rel="stylesheet" href="css/datepicker.css">
 	</head>
@@ -11,6 +12,7 @@
 		<p>Please select a date for your appointment:</p>
 		<div class="datepicker">
 			<input class="form-control datepicker__input" placeholder="Choose a date..." />
+			<button class="datepicker__trigger icon-calendar"></button>
 		</div>
 		<script src="js/datepicker.js" type="text/javascript"></script>
 	</body>
