Input needs to be readonly

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 		<h1>Welcome to the Appointment Creator!</h1>
 		<p>Please select a date for your appointment:</p>
 		<div class="datepicker">
-			<input class="form-control datepicker__input" placeholder="Choose a date..." />
+			<input class="form-control datepicker__input" placeholder="Choose a date..." readonly />
 			<button class="datepicker__trigger icon-calendar"></button>
 		</div>
 		<script src="js/datepicker.js" type="text/javascript"></script>
