--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="css/icons.css">
 		<link rel="stylesheet" href="css/app.css">
 		<link rel="stylesheet" href="css/datepicker.css">
+		<link rel="stylesheet" href="css/timepicker.css">
 	</head>
 	<body>
 		<h1>Welcome to the Appointment Creator!</h1>
@@ -14,6 +15,11 @@
 			<input class="form-control datepicker__input" placeholder="Choose a date..." readonly />
 			<button class="datepicker__trigger icon-calendar"></button>
 		</div>
+		<div class="timepicker">
+			<input class="form-control timepicker__input" placeholder="Choose time..." readonly />
+			<button class="timepicker__trigger icon-clock"></button>
+		</div>
 		<script src="js/datepicker.js" type="text/javascript"></script>
+		<script src="js/timepicker.js" type="text/javascript"></script>
 	</body>
 </html>
