--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,27 @@
 	<body>
 		<h1>Welcome to the Appointment Creator!</h1>
 		<p>Please select a date for your appointment:</p>
-		<div class="datepicker">
-			<input class="form-control datepicker__input" placeholder="Choose a date..." readonly />
-			<button class="datepicker__trigger icon-calendar"></button>
-		</div>
-		<div class="timepicker">
-			<input class="form-control timepicker__input" placeholder="Choose time..." readonly />
-			<button class="timepicker__trigger icon-clock"></button>
-		</div>
+		<form id="form">
+			<div class="form-group">
+				<div class="datepicker">
+					<input name="date" class="form-control datepicker__input" placeholder="Choose a date..." readonly />
+					<button class="datepicker__trigger icon-calendar"></button>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="timepicker">
+					<input name="time" class="form-control timepicker__input" placeholder="Choose time..." readonly />
+					<button class="timepicker__trigger icon-clock"></button>
+				</div>
+			</div>
+			<div>
+				<button class="btn btn-primary" id="save-button">Save</button>
+				<button class="btn btn-danger" id="cancel-button">Cancel</button>
+			</div>
+			<p id="summary"></p>
+		</form>
 		<script src="js/datepicker.js" type="text/javascript"></script>
 		<script src="js/timepicker.js" type="text/javascript"></script>
+		<script src="js/app.js" type="text/javascript"></script>
 	</body>
 </html>
